second commit done

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     </div>
                     <div class="nav">
                         <ul class="nav-list">
-                            <li class="link-menu"><a href="#"><b>Products</b></a></li>
+                            <li class="link-menu"><a href="https://www.npmjs.com/products"><b>Products</b></a></li>
                             <li><a href="#"><b>Pricing</b></a></li>
-                            <li><a href="#"><b>Documentation</b></a></li>
-                            <li><a href="#"><b>Community</b></a></li>
+                            <li><a href="https://docs.npmjs.com/"><b>Documentation</b></a></li>
+                            <li><a href="https://npm.community/"><b>Community</b></a></li>
                         </ul>
                     </div>  
             </div>
@@ -42,8 +42,8 @@
 
                     <span class="part2-head2">
                         <ul>
-                            <li class="sign-up"><a href="#">Sign Up</a></li>
-                            <li><a href="#">Sign In</a></li>
+                            <li class="sign-up"><a href="https://www.npmjs.com/signup">Sign Up</a></li>
+                            <li><a href="https://www.npmjs.com/login">Sign In</a></li>
                         </ul>
                     </span>
             </div>
@@ -87,7 +87,7 @@
         <div class="footer">
             <span class="span1">
                 <img src="./images/logo1.png" alt="logo-1" class="logo">
-                <br>
+                <br><br><br>
                 <img src="./images/logo2.png" alt="logo2" class="logo2">
                 <br>
             </span>
